<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_calendar_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shopping_black_24dp"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting_black_24dp"
        android:title="@string/title_setting" />

</menu>
